@@ -3,7 +3,7 @@
 // Project ProjectForge Community Edition
 //         www.projectforge.org
 //
-// Copyright (C) 2001-2020 Micromata GmbH, Germany (www.micromata.com)
+// Copyright (C) 2001-2022 Micromata GmbH, Germany (www.micromata.com)
 //
 // ProjectForge is dual-licensed.
 //
@@ -34,10 +34,8 @@ import java.util.*;
  * Some useful methods for determing and converting property, getter and setter names.
  *
  * @author Kai Reinhard (k.reinhard@micromata.de)
- *
  */
-public class BeanHelper
-{
+public class BeanHelper {
   private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(BeanHelper.class);
 
   private static boolean TEST_MODE = false;
@@ -46,8 +44,7 @@ public class BeanHelper
    * For internal test cases only! If true, log errors are suppressed. Please call {@link #exitTestMode()} always
    * directly after your test call!
    */
-  public static void enterTestMode()
-  {
+  public static void enterTestMode() {
     TEST_MODE = true;
     log.info("***** Entering TESTMODE.");
   }
@@ -56,14 +53,12 @@ public class BeanHelper
    * For internal test cases only! If true, log errors are suppressed. Please set TEST_MODE always to false after your
    * test call!
    */
-  public static void exitTestMode()
-  {
+  public static void exitTestMode() {
     TEST_MODE = false;
     log.info("***** Exit TESTMODE.");
   }
 
-  public static String determinePropertyName(final Method method)
-  {
+  public static String determinePropertyName(final Method method) {
     final String name = method.getName();
     if (name.startsWith("get") == true || name.startsWith("set") == true || name.startsWith("has") == true) {
       return StringUtils.uncapitalize(name.substring(3));
@@ -73,8 +68,7 @@ public class BeanHelper
     return method.getName();
   }
 
-  public static Method determineGetter(final Class<?> clazz, final String fieldname)
-  {
+  public static Method determineGetter(final Class<?> clazz, final String fieldname) {
     return determineGetter(clazz, fieldname, true);
   }
 
@@ -85,8 +79,7 @@ public class BeanHelper
    * @param fieldname
    * @return
    */
-  public static Annotation[] getDeclaredAnnotations(final Class<?> clazz, final String fieldname)
-  {
+  public static Annotation[] getDeclaredAnnotations(final Class<?> clazz, final String fieldname) {
     Class<?> classToCheck = clazz;
     String fieldnameToCheck = fieldname;
     if (fieldname.contains(".")) {
@@ -108,8 +101,7 @@ public class BeanHelper
    * @param onlyPublicGetter true is default.
    * @return
    */
-  public static Method determineGetter(final Class<?> clazz, final String fieldname, final boolean onlyPublicGetter)
-  {
+  public static Method determineGetter(final Class<?> clazz, final String fieldname, final boolean onlyPublicGetter) {
     final String cap = StringUtils.capitalize(fieldname);
     final Method[] methods = getAllDeclaredMethods(clazz);
     for (final Method method : methods) {
@@ -141,8 +133,7 @@ public class BeanHelper
    * @param clazz
    * @return
    */
-  public static List<Method> getAllGetterMethods(final Class<?> clazz)
-  {
+  public static List<Method> getAllGetterMethods(final Class<?> clazz) {
     return getAllGetterMethods(clazz, true);
   }
 
@@ -154,8 +145,7 @@ public class BeanHelper
    * @param includingSuperClasses default is true.
    * @return
    */
-  public static List<Method> getAllGetterMethods(final Class<?> clazz, final boolean includingSuperClasses)
-  {
+  public static List<Method> getAllGetterMethods(final Class<?> clazz, final boolean includingSuperClasses) {
     final Method[] methods;
     if (includingSuperClasses == true) {
       methods = getAllDeclaredMethods(clazz);
@@ -168,7 +158,7 @@ public class BeanHelper
       if (name.startsWith("get") == true && name.length() > 3 || //
           name.startsWith("has") == true
           || name.startsWith("is") == true
-              && name.length() > 2) {
+          && name.length() > 2) {
         if (method.getParameterTypes().length == 0 && method.isBridge() == false) {
           // Don't return bridged methods (methods defined in interface or super class with different return type).
           list.add(method);
@@ -183,8 +173,7 @@ public class BeanHelper
    *
    * @param method
    */
-  public static String getProperty(final Method method)
-  {
+  public static String getProperty(final Method method) {
     final String name = method.getName();
     int pos = 0;
     if ((name.startsWith("get") == true || name.startsWith("has") == true) && name.length() > 3) {
@@ -198,8 +187,11 @@ public class BeanHelper
     return StringUtils.uncapitalize(property);
   }
 
-  public static Class<?> determinePropertyType(final Method method)
-  {
+  public static Class<?> determinePropertyType(final Class<?> clazz, final String fieldname) {
+    return determinePropertyType(determineGetter(clazz, fieldname));
+  }
+
+  public static Class<?> determinePropertyType(final Method method) {
     if (method == null) {
       return null;
     }
@@ -218,8 +210,7 @@ public class BeanHelper
    * @param fieldname
    * @return
    */
-  public static Method determineSetter(final Class<?> clazz, final String fieldname)
-  {
+  public static Method determineSetter(final Class<?> clazz, final String fieldname) {
     final String cap = StringUtils.capitalize(fieldname);
     final Method[] methods = clazz.getMethods();
     for (final Method method : methods) {
@@ -230,8 +221,7 @@ public class BeanHelper
     return null;
   }
 
-  public static Method determineSetter(final Class<?> clazz, final Method method)
-  {
+  public static Method determineSetter(final Class<?> clazz, final Method method) {
     final String name = method.getName();
     if (name.startsWith("set") == true) {
       return method;
@@ -240,11 +230,11 @@ public class BeanHelper
         if (name.startsWith("get") == true || name.startsWith("has") == true) {
           final Class<?> parameterType = method.getReturnType();
           final String setterName = "set" + name.substring(3);
-          return clazz.getMethod(setterName, new Class[] { parameterType });
+          return clazz.getMethod(setterName, new Class[]{parameterType});
         } else if (name.startsWith("is") == true) {
           final Class<?> parameterType = method.getReturnType();
           final String setterName = "set" + name.substring(2);
-          return clazz.getMethod(setterName, new Class[] { parameterType });
+          return clazz.getMethod(setterName, new Class[]{parameterType});
         }
       } catch (final SecurityException ex) {
         log.error("Could not determine setter for '" + name + "': " + ex, ex);
@@ -258,8 +248,7 @@ public class BeanHelper
     return null;
   }
 
-  public static void invokeSetter(final Object obj, final Method method, final Object value)
-  {
+  public static void invokeSetter(final Object obj, final Method method, final Object value) {
     final Method setter = determineSetter(obj.getClass(), method);
     invoke(obj, setter, value);
   }
@@ -271,24 +260,21 @@ public class BeanHelper
    * @param method
    * @return
    */
-  public static Object invoke(final Object obj, final Method method)
-  {
+  public static Object invoke(final Object obj, final Method method) {
     return invoke(obj, method, null);
   }
 
-  public static Object invoke(final Object obj, final Method method, final Object[] args)
-  {
+  public static Object invoke(final Object obj, final Method method, final Object[] args) {
     try {
       return method.invoke(obj, args);
-    } catch (final IllegalArgumentException |IllegalAccessException | InvocationTargetException ex) {
+    } catch (final IllegalArgumentException | IllegalAccessException | InvocationTargetException ex) {
       log.error("Could not invoke '" + method.getName() + "': " + ex.getMessage() + " for object [" + obj + "] with args: " + args,
           ex);
       throw new RuntimeException(ex);
     }
   }
 
-  public static Object newInstance(final String className)
-  {
+  public static Object newInstance(final String className) {
     Class<?> clazz = null;
     try {
       clazz = Class.forName(className);
@@ -301,13 +287,11 @@ public class BeanHelper
     return null;
   }
 
-  private static void logInstantiationException(final Exception ex, final Class<?> clazz)
-  {
+  private static void logInstantiationException(final Exception ex, final Class<?> clazz) {
     logInstantiationException(ex, clazz.getName());
   }
 
-  private static void logInstantiationException(final Exception ex, final String className)
-  {
+  private static void logInstantiationException(final Exception ex, final String className) {
     if (TEST_MODE == false) {
       log.error("Can't create instance of '" + className + "': " + ex.getMessage(), ex);
     } else {
@@ -315,22 +299,17 @@ public class BeanHelper
     }
   }
 
-  public static Object newInstance(final Class<?> clazz)
-  {
+  public static Object newInstance(final Class<?> clazz) {
     Constructor<?> constructor = null;
     try {
       constructor = clazz.getDeclaredConstructor(new Class[0]);
-    } catch (final SecurityException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final NoSuchMethodException ex) {
+    } catch (final SecurityException | NoSuchMethodException ex) {
       logInstantiationException(ex, clazz);
     }
     if (constructor == null) {
       try {
-        return clazz.newInstance();
-      } catch (final InstantiationException ex) {
-        logInstantiationException(ex, clazz);
-      } catch (final IllegalAccessException ex) {
+        return clazz.getDeclaredConstructor().newInstance();
+      } catch (final InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
         logInstantiationException(ex, clazz);
       }
       return null;
@@ -338,58 +317,40 @@ public class BeanHelper
     constructor.setAccessible(true);
     try {
       return constructor.newInstance();
-    } catch (final IllegalArgumentException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final InstantiationException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final IllegalAccessException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final InvocationTargetException ex) {
+    } catch (final IllegalArgumentException | InstantiationException | InvocationTargetException | IllegalAccessException ex) {
       logInstantiationException(ex, clazz);
     }
     return null;
   }
 
-  public static Object newInstance(final Class<?> clazz, final Class<?> paramType, final Object param)
-  {
-    return newInstance(clazz, new Class<?>[] { paramType }, param);
+  public static Object newInstance(final Class<?> clazz, final Class<?> paramType, final Object param) {
+    return newInstance(clazz, new Class<?>[]{paramType}, param);
   }
 
   public static Object newInstance(final Class<?> clazz, final Class<?> paramType1, final Class<?> paramType2,
-      final Object param1,
-      final Object param2)
-  {
-    return newInstance(clazz, new Class<?>[] { paramType1, paramType2 }, param1, param2);
+                                   final Object param1,
+                                   final Object param2) {
+    return newInstance(clazz, new Class<?>[]{paramType1, paramType2}, param1, param2);
   }
 
-  public static Object newInstance(final Class<?> clazz, final Class<?>[] paramTypes, final Object... params)
-  {
+  public static Object newInstance(final Class<?> clazz, final Class<?>[] paramTypes, final Object... params) {
     Constructor<?> constructor = null;
     try {
       constructor = clazz.getDeclaredConstructor(paramTypes);
-    } catch (final SecurityException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final NoSuchMethodException ex) {
+    } catch (final SecurityException | NoSuchMethodException ex) {
       logInstantiationException(ex, clazz);
     }
     constructor.setAccessible(true);
     try {
       return constructor.newInstance(params);
-    } catch (final IllegalArgumentException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final InstantiationException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final IllegalAccessException ex) {
-      logInstantiationException(ex, clazz);
-    } catch (final InvocationTargetException ex) {
+    } catch (final IllegalArgumentException | InstantiationException | InvocationTargetException | IllegalAccessException ex) {
       logInstantiationException(ex, clazz);
     }
     return null;
   }
 
-  public static Object invoke(final Object obj, final Method method, final Object arg)
-  {
-    return invoke(obj, method, new Object[] { arg });
+  public static Object invoke(final Object obj, final Method method, final Object arg) {
+    return invoke(obj, method, new Object[]{arg});
   }
 
   /**
@@ -399,8 +360,7 @@ public class BeanHelper
    * @return
    * @see Class#getDeclaredFields()
    */
-  public static Field[] getAllDeclaredFields(Class<?> clazz)
-  {
+  public static Field[] getAllDeclaredFields(Class<?> clazz) {
     Field[] fields = clazz.getDeclaredFields();
     while (clazz.getSuperclass() != null) {
       clazz = clazz.getSuperclass();
@@ -416,8 +376,7 @@ public class BeanHelper
    * @param fieldname
    * @return the field or null
    */
-  public static Field getDeclaredField(Class<?> clazz, String fieldname)
-  {
+  public static Field getDeclaredField(Class<?> clazz, String fieldname) {
     Field[] fields = getAllDeclaredFields(clazz);
     for (Field f : fields) {
       if (f.getName().equals(fieldname)) {
@@ -434,8 +393,7 @@ public class BeanHelper
    * @return
    * @see Class#getDeclaredMethods()
    */
-  public static Method[] getAllDeclaredMethods(Class<?> clazz)
-  {
+  public static Method[] getAllDeclaredMethods(Class<?> clazz) {
     Method[] methods = clazz.getDeclaredMethods();
     while (clazz.getSuperclass() != null) {
       clazz = clazz.getSuperclass();
@@ -454,8 +412,7 @@ public class BeanHelper
    * @throws IllegalAccessException
    * @throws IllegalArgumentException
    */
-  public static Object getProperty(final Object bean, final String property)
-  {
+  public static Object getProperty(final Object bean, final String property) {
     final Method getter = determineGetter(bean.getClass(), property);
     if (getter == null) {
       throw new RuntimeException("Getter for property '" + bean.getClass() + "." + property + "' not found.");
@@ -477,13 +434,12 @@ public class BeanHelper
    * @param bean
    * @param property
    * @param value
-   * @see Method#invoke(Object, Object...)
    * @throws InvocationTargetException
    * @throws IllegalAccessException
    * @throws IllegalArgumentException
+   * @see Method#invoke(Object, Object...)
    */
-  public static Object setProperty(final Object bean, final String property, final Object value)
-  {
+  public static Object setProperty(final Object bean, final String property, final Object value) {
     final Method setter = determineSetter(bean.getClass(), property);
     if (setter == null) {
       throw new RuntimeException("Getter for property '" + property + "' not found.");
@@ -509,8 +465,7 @@ public class BeanHelper
    * @throws IllegalAccessException
    * @throws IllegalArgumentException
    */
-  public static Object getIndexedProperty(final Object bean, final String property)
-  {
+  public static Object getIndexedProperty(final Object bean, final String property) {
     final int pos = property.indexOf('[');
     if (pos <= 0) {
       throw new UnsupportedOperationException("'" + property + "' is not an indexed property, such as 'xxx[#]'.");
@@ -549,8 +504,7 @@ public class BeanHelper
    * @throws IllegalAccessException
    * @throws IllegalArgumentException
    */
-  public static Object getNestedProperty(final Object bean, final String property)
-  {
+  public static Object getNestedProperty(final Object bean, final String property) {
     if (StringUtils.isEmpty(property) == true || bean == null) {
       return null;
     }
@@ -575,8 +529,7 @@ public class BeanHelper
    * @param clazz
    * @return
    */
-  public static Field[] getDeclaredPropertyFields(final Class<?> clazz)
-  {
+  public static Field[] getDeclaredPropertyFields(final Class<?> clazz) {
     final Field[] fields = getAllDeclaredFields(clazz);
     final List<Field> list = new ArrayList<Field>();
     for (final Field field : fields) {
@@ -593,12 +546,11 @@ public class BeanHelper
 
   /**
    * @param obj
-   * @param clazz Class of object or superclass at which the fieldname is declared
+   * @param clazz     Class of object or superclass at which the fieldname is declared
    * @param fieldname
    * @return
    */
-  public static Object getFieldValue(final Object obj, final Class<?> clazz, final String fieldname)
-  {
+  public static Object getFieldValue(final Object obj, final Class<?> clazz, final String fieldname) {
     if (obj == null) {
       return null;
     }
@@ -616,8 +568,7 @@ public class BeanHelper
     return null;
   }
 
-  public static Object getFieldValue(final Object obj, final Field field)
-  {
+  public static Object getFieldValue(final Object obj, final Field field) {
     try {
       return field.get(obj);
     } catch (final IllegalArgumentException ex) {
@@ -646,8 +597,7 @@ public class BeanHelper
    * @param properties
    * @return true if any property is different between src and dest object.
    */
-  public static boolean copyProperties(final Object src, final Object dest, final String... properties)
-  {
+  public static boolean copyProperties(final Object src, final Object dest, final String... properties) {
     return copyProperties(src, dest, false, properties);
   }
 
@@ -662,8 +612,7 @@ public class BeanHelper
    */
   @SuppressWarnings("unchecked")
   public static boolean copyProperties(final Object src, final Object dest, final boolean whitespaceEqualsNull,
-      final String... properties)
-  {
+                                       final String... properties) {
     boolean modified = false;
     for (final String property : properties) {
       final Object srcValue = BeanHelper.getProperty(src, property);
@@ -700,8 +649,7 @@ public class BeanHelper
     return modified;
   }
 
-  static boolean isEqualList(final Collection<?> c1, final Collection<?> c2)
-  {
+  static boolean isEqualList(final Collection<?> c1, final Collection<?> c2) {
     if (c1 == c2) {
       return true;
     } else if (c1 == null) {
@@ -730,8 +678,7 @@ public class BeanHelper
     return true;
   }
 
-  static Object get(final Collection<?> col, final int index)
-  {
+  static Object get(final Collection<?> col, final int index) {
     final Iterator<?> it = col.iterator();
     for (int i = 0; i < index; i++) {
       it.next();
